<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="410dp"
        android:layout_height="731dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtFlower"
            android:layout_width="258dp"
            android:layout_height="71dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="96dp"
            android:layout_marginEnd="78dp"
            android:ems="10"
            android:hint="@string/txtFlower"
            android:inputType="numberDecimal"
            android:textColor="@android:color/holo_orange_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/txtLiquid"
            android:layout_width="260dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="203dp"
            android:layout_marginEnd="76dp"
            android:ems="10"
            android:hint="@string/radLiquid"
            android:inputType="numberDecimal"
            android:textColor="@android:color/holo_orange_dark" />

        <EditText
            android:id="@+id/txtEdible"
            android:layout_width="259dp"
            android:layout_height="84dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="334dp"
            android:ems="10"
            android:hint="@string/txtEdible"
            android:inputType="numberDecimal"
            android:textColor="@android:color/holo_orange_dark" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="248dp"
            android:layout_height="43dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="77dp"
            android:layout_marginTop="451dp"
            android:contentDescription="@string/txtResult"
            android:text="@string/txtResult"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="184dp"
            android:layout_height="73dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="112dp"
            android:layout_marginTop="520dp"
            android:text="@string/btnCalculate" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>